<resources>
    <string name="app_name">晴空舆情</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- HomeActivity -->
    <string name="home">首页</string>
    <string name="head">头条</string>
    <string name="follow_up">跟进</string>
    <string name="mine">我的</string>
    <string name="search_news">新闻搜索</string>
    <string name="msg_back_to_logout">再点一次退出应用</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <!--登录-->
    <string name="login">登录</string>
    <string name="input_userName">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="copyright">©2016智慧网信</string>
    <string name="forget_pw">忘记密码请联系所在机构管理员</string>

    <string name="toutiao_collect">头条收藏簿</string>
    <string name="collect">收藏</string>
    <string name="cancle">取消</string>
    <string name="news_detail">信息详情</string>
    <string name="originalText">查看原文</string>
    <string name="search_no_result">爬出还在路上抓取信息，未及时返回...</string>
    <string name="search_helper_finish">谢谢，小助手已着手处理</string>
    <string name="search_notify_helper">通知小助手尽快处理</string>
    <string name="search_hot">大家都在搜:</string>


    <string name="mine_information">基本信息</string>
    <string name="mine_app">应用相关</string>
    <string name="mine_name">姓名</string>
    <string name="mine_division">科室</string>
    <string name="mine_team">所在组</string>
    <string name="mine_tel">电话</string>
    <string name="mine_email">邮箱</string>
    <string name="mine_system_set">系统设置</string>
    <string name="mine_system_information">版本更新</string>
    <string name="updata_version">更新版本</string>
    <string name="current_version">当前版本</string>
    <string name="new_version">最新版本</string>
    <string name="update_version">升级</string>

    <string name="mine_logout">退出登录</string>
    <string name="title_activity_settings">Settings</string>
    <!-- 系统设置 -->
    <string name="set_information">敏感信息提醒设置</string>
    <string name="set_notify">当有新的敏感推送时提醒我</string>
    <string name="set_notify_way">提醒方式设置</string>
    <string name="set_sound">声音</string>
    <string name="set_vibrator">震动</string>
    <string name="set_modify_pw">修改密码</string>
    <string name="set_pw_original">请输入原密码</string>
    <string name="set_pw_new">请输入新密码</string>
    <string name="set_pw_new_again">请确认新密码</string>
    <!-- sysytem -->
    <string name="net_fail">网络加载失败，点击此处重新刷新</string>
    <string name="no_network">网络连接失败,请检查网络设置</string>
    <string name="updata_tips">当前连接网络为移动网络，是否继续继续本次升级</string>
    <string name="exit">确定要退出?</string>

    <!--布局刷新 FrashLayout,ReloadRefreshLayout也使用了一部分-->

    <string name="cube_ptr_pull_up">上拉</string>
    <string name="cube_ptr_pull_up_to_load">上拉加载</string>
    <string name="cube_ptr_release_to_load">释放加载</string>
    <string name="cube_ptr_pull_down">下拉</string>
    <string name="cube_ptr_pull_down_to_refresh">下拉刷新</string>
    <string name="cube_ptr_release_to_refresh">释放刷新</string>
    <string name="cube_ptr_refreshing">正在刷新...</string>
    <string name="cube_ptr_refresh_complete">更新完成.</string>
    <string name="cube_ptr_loading">正在加载...</string>
    <string name="cube_ptr_load_complete">加载完成.</string>

    <string name="cube_ptr_last_update">上次更新:&#160;</string>
    <string name="cube_ptr_seconds_ago">&#160;秒之前</string>
    <string name="cube_ptr_minutes_ago">&#160;分钟之前</string>
    <string name="cube_ptr_hours_ago">&#160;小时之前</string>
    <string name="tag_normal">"#5bb95c"</string>
    <string name="tag_color_orange">"#f1924e"</string>
    <string name="tag_color_orange_my">"#e7bf3f"</string>
</resources>
