<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_no_result_sum"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/search_no_result"
            android:textColor="@color/font_gray_666"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/mine_item_margin_left"
        android:paddingRight="@dimen/mine_item_margin_left">

        <Button
            android:id="@+id/search_btn_no_result"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/login_button_bg"
            android:gravity="center"
            android:text="@string/search_notify_helper"
            android:textColor="@android:color/white"
            android:textSize="19sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/background_gray">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="15dp"
            android:text="@string/search_hot"
            android:textColor="@color/font_gray_666"
            android:textSize="13sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/line_gray"></View>

    <ListView
        android:id="@+id/serch_listView_hot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="#00000000"
        android:dividerHeight="1px"
        android:scrollbars="none"></ListView>
</LinearLayout>
